--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/six-frontend-devs/lithosphere#readme",
   "dependencies": {
     "better-sqlite3": "^5.4.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "package.json": "^2.0.1"
   }
 }
