--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js --exec babel-node src/index.js"
+    "start": "nodemon server/server.js --exec babel-node src/index.js"
   },
   "repository": {
     "type": "git",
